--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
   object-fit: cover;
   object-position: center;
   max-height: 100%;
+  min-width: 100%;
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 2px 5px 5px 5px rgba(0, 0, 0, 0.3);
